# LatticeViz

./: CMakeLists.txt
benchmark/: CMakeLists.txt
benchmark/src/: main.cpp
cmake/: Dependencies.cmake
core/: CMakeLists.txt
core/include/core/: window.h
core/src/: window.cpp
crypto/: CMakeLists.txt
crypto/include/crypto/: LWE.h
crypto/src/: LWE.cpp
docs/: main.tex  references.bib
docs/chapters/: introduction.tex  theoretical_background.tex
gfx/: CMakeLists.txt
gfx/include/gfx/: Renderer.h  renderer.h  vertex_array.h
gfx/src/: Renderer.cpp  renderer.cpp  vertex_array.cpp
src/: main.cpp
tests/: main.test.cpp
